[gd_scene load_steps=9 format=2]

[ext_resource path="res://NPC/BaseFoe/Attacks/AttackBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPC/BrainJar/Attacks/BrainJarAttack2.gd" type="Script" id=2]
[ext_resource path="res://Engine/Battle/BattleSpeechBubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://NPC/BrainJar/brainjarsketchy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Engine/Battle/Dodger/Projectiles/Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Engine/Battle/Dodger/Projectiles/brain_bouncer.png" type="Texture" id=6]
[ext_resource path="res://Engine/Battle/BattleInputHint.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.78, 4.14 )

[node name="BrainJarAttack2" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Timer" parent="." index="0"]
wait_time = 12.0

[node name="BattleSpeechBubble" parent="." index="1" instance=ExtResource( 3 )]
margin_left = 212.0
margin_top = 10.0
margin_right = 401.0
margin_bottom = 85.0
text = "Nice try. Don't screw up this time."

[node name="BattleSpeechBubble2" parent="." index="2" instance=ExtResource( 3 )]
visible = false
margin_left = 272.0
margin_top = 7.0
margin_right = 461.0
margin_bottom = 82.0
text = "You *!"

[node name="Tween" type="Tween" parent="." index="3"]

[node name="brainjarsketchy" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 336, 155 )

[node name="BrainBullet" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( -66, 97 )
death_time = 40.0
speed = 55.0

[node name="Sprite" parent="BrainBullet" index="0"]
texture = ExtResource( 6 )
hframes = 16

[node name="CollisionShape2D" parent="BrainBullet" index="1"]
shape = SubResource( 1 )

[node name="BrainBullet2" parent="." index="6" instance=ExtResource( 5 )]
position = Vector2( -185, 157 )
death_time = 40.0
speed = 55.0

[node name="Sprite" parent="BrainBullet2" index="0"]
texture = ExtResource( 6 )
hframes = 16

[node name="CollisionShape2D" parent="BrainBullet2" index="1"]
shape = SubResource( 1 )

[node name="BrainBullet3" parent="." index="7" instance=ExtResource( 5 )]
position = Vector2( -306, 131 )
death_time = 40.0
speed = 55.0

[node name="Sprite" parent="BrainBullet3" index="0"]
texture = ExtResource( 6 )
hframes = 16

[node name="CollisionShape2D" parent="BrainBullet3" index="1"]
shape = SubResource( 1 )

[node name="BattleInputHintLeft" parent="." index="8" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 175, 192 )
action_hint = "left"

[node name="BattleInputHintRight" parent="." index="9" instance=ExtResource( 7 )]
modulate = Color( 1, 1, 1, 0.498039 )
position = Vector2( 207, 192 )
[connection signal="successful_hit" from="BrainBullet" to="." method="_on_BrainBullet_successful_hit"]
[connection signal="successful_hit" from="BrainBullet2" to="." method="_on_BrainBullet_successful_hit"]
[connection signal="successful_hit" from="BrainBullet3" to="." method="_on_BrainBullet_successful_hit"]

[editable path="BrainBullet"]

[editable path="BrainBullet2"]

[editable path="BrainBullet3"]
