[gd_scene load_steps=7 format=2]

[ext_resource path="res://NPC/BaseFoe/Attacks/AttackBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://NPC/BrainJar/Attacks/BrainJarAttack2.gd" type="Script" id=2]
[ext_resource path="res://Engine/Battle/BattleSpeechBubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://NPC/BrainJar/brainjarsketchy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Engine/Battle/BattleInputHint.tscn" type="PackedScene" id=5]
[ext_resource path="res://Engine/Battle/Dodger/Projectiles/BrainWaveEmitter.tscn" type="PackedScene" id=6]

[node name="BrainJarAttack3" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Timer" parent="." index="0"]
wait_time = 12.0

[node name="BattleSpeechBubble" parent="." index="1" instance=ExtResource( 3 )]
margin_left = 212.0
margin_top = 10.0
margin_right = 379.0
margin_bottom = 85.0
text = "You're on your own. Just don't get hit, *."

[node name="BattleSpeechBubble2" parent="." index="2" instance=ExtResource( 3 )]
visible = false
margin_left = 272.0
margin_top = 7.0
margin_right = 461.0
margin_bottom = 82.0
text = "You *!"

[node name="Tween" type="Tween" parent="." index="3"]

[node name="brainjarsketchy" parent="." index="4" instance=ExtResource( 4 )]
position = Vector2( 336, 155 )

[node name="BattleInputHintRight2" parent="." index="5" instance=ExtResource( 5 )]
position = Vector2( 193, 193 )
flashy = true
action_hint = "confirm"

[node name="BrainWaveEmitter" parent="." index="6" instance=ExtResource( 6 )]
position = Vector2( 19, 107 )

[node name="InitialWait" type="Timer" parent="." index="8"]
wait_time = 3.0
one_shot = true
autostart = true
[connection signal="timeout" from="InitialWait" to="." method="_on_InitialWait_timeout"]
